# onnx_latex

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  index.html  index.js  package-lock.json  package.json
data/: Cargo.toml
docker/: Dockerfile  docker-compose.yml
examples/latex_test/: Cargo.toml  l2.onnx  main.ipynb  workspace.code-workspace
examples/latex_test/src/: main.rs  workspace.code-workspace
examples/original/: Cargo.toml  l2s.onnx  main.ipynb  workspace.code-workspace
examples/original/src/: main.rs
examples/pytorch-resnet/: Cargo.toml  main.ipynb
examples/pytorch-resnet/src/: main.rs
hir/: Cargo.toml
hir/src/: lib.rs  macros.rs  utils.rs
hir/src/infer/: analyser.rs  fact.rs  factoid.rs  helpers.rs  mod.rs  model.rs  ops.rs
hir/src/infer/rules/: expr.rs  mod.rs  path.rs  proxies.rs  solver.rs
hir/src/ops/: activations.rs  binary.rs  expandable.rs  logic.rs  matmul.rs  scan.rs  source.rs
hir/src/ops/array/: add_dims.rs  broadcast.rs  concat.rs  constant_like.rs  constant_of_shape.rs  crop.rs  flatten.rs  gather.rs  gather_elements.rs  pad.rs  permute_axes.rs  reshape.rs  rm_dims.rs  scatter_elements.rs  scatter_nd.rs  shape.rs  size.rs  slice.rs  split.rs  squeeze.rs  strided_slice.rs  tile.rs
latex_front/: jsconfig.json  package-lock.json  package.json
latex_front/src/: App.js  index.js
latex_front/src/api/: camera.js  layer.js  model.js  rest_api.js
latex_front/src/components/: Arrow.jsx  Controls.jsx  D2Layer.jsx  D2Lines.jsx  D3Layer.jsx  GroupLayers.jsx  LayerImage.jsx  LayerName.jsx  LayerShape.jsx  LayerTable.jsx  LoadingModel.jsx  MainWraper.jsx  Media.jsx  ProfileLayer.jsx  ZoomBar.jsx
latex_front/src/css/: index.css
latex_front/src/mock/: D2LayerMock.js  GroupLayerMock.js  LayersMock.js
latex_front/src/pages/: InitPage.jsx  MainPage.jsx  ModelPage.jsx
latex_front/src/state/: middleware.js  store.js
latex_front/src/util/: styleUtil.js
latex_gen/: Cargo.toml
latex_gen/formuls/: etc.ron  formul.ron
latex_gen/src/: lib.rs  node_info.rs  parse_struct.rs
onnx/: Cargo.toml  build.rs  onnx.rs
onnx/formuls/: activation.ron  etc.ron  formul.ron
onnx/src/: latex_tool.rs  lib.rs  model.rs  pb_helpers.rs
onnx/src/latex_tool/: node_info.rs  parse_struct.rs
onnx/src/ops/: cast.rs  logic.rs  math.rs  mod.rs  quant.rs  resize.rs
onnx/src/ops/array/: compress.rs  mod.rs  nonzero.rs  one_hot.rs  pad.rs  slice.rs
onnx/src/ops/math/: clip.rs  gemm.rs  mat_mul_integer.rs  pow.rs  rem.rs
onnx/src/ops/ml/: category_mapper.rs  tree_ensemble_classifier.rs
onnx/src/ops/nn/: batch_norm.rs  dropout.rs  instance_norm.rs  lrn.rs  mod.rs
onnx/src/ops/rec/: gru.rs  lstm.rs  rnn.rs  scan.rs
print_path_app/: graph.js  index.html  index.js  package.json  renderer.js  result.html
server/: Cargo.toml  client.py  proto3_pb2.py  proto_build.sh
server/src/: main.rs
(+11 files in other folders)
