[package]
name = "latex_gen"
version = "0.1.0"
authors = ["maxtnt <maxtnuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-onnx = { path = "../onnx"}
serde = {version="1.0",features = ["derive"]}
serde_json = "1.0"
rand = "0.8.3"
nom={version = "6.1.2"}
ron={version = "0.6.4"}