[package]
name = "tract-onnx"
version = "0.12.6-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "NeuralNetworks", "ONNX" ]
categories = [ "science" ]
autobenches = false
edition = "2018"
exclude = [ "test_cases" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1"
derive-new = "0.5"
educe = "=0.4.11" # locked for rust 1.41.0s
log = "0.4"
num-integer = "0.1"
prost = "0.7"
smallvec = "1"
tract-hir = { path = "../hir" }
# tract-nnef = { path = "../nnef" }
tract-onnx-opl = { path = "../onnx-opl" }
serde = {version="1.0",features = ["derive"]}
serde_json = "1.0"

[dependencies.nom]
version = "6.1.2"
optional = true

[dependencies.ron]
version = "0.6.4"
optional= true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mapr = "0.8"

[build-dependencies]
prost-build = "0.7"

[features]
default=[]
latex=["ron","nom"]