[package]
name = "server"
version = "0.1.0"
authors = ["maxtnt <maxtnuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latex_gen = { path = "../latex_gen" }
actix-web = "3"
actix-multipart = "0.3.0"
sanitize-filename = "0.2"
futures = "0.3.1"
derive_more = "0.99.13"
chrono="0.4"
rand = "0.8.3"
serde = {version="1.0",features = ["derive"]}
serde_json = "1.0"