[package]
name = "latex_test"
version = "0.1.0"
authors = ["Maxtnt"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
tract-onnx = { path = "../../onnx",features=["latex"] }
rand = "0.8.3"
